--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
   <title>Pazemo API</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/Pazemo/docs/main/source/images/logo.png"/>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.18.1/build/styles/default.min.css">
   <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.18.1/build/highlight.min.js"></script>
 </head>
@@ -25,7 +26,7 @@
     id = "thedoc" 
     spec-url="https://api.stg.pazemo.com/explorer/openapi.json"
     allow-server-selection = "false"
-    show-header = "false"
+    show-header = "true"
     show-info	= "true"
     theme = "light"
     primary-color = "#00bfff"
@@ -34,7 +35,7 @@
     allow-api-list-style-selection = "false"
     regular-font = 'Open Sans'
     schema-style = 'tree'
-    render-style = 'read'
+    render-style = 'view'
     default-schema-tab = "model"
   >
   <div slot="nav-logo" style="display: flex; align-items: center; justify-content: center;"> 
