--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <rapi-doc 
     id = "thedoc" 
-    spec-url="https://api.stg.pazemo.com/explorer/openapi.json"
+    spec-url="https://api.stg.pazemo.com/openapi.json"
     allow-server-selection = "false"
     show-header = "true"
     show-info	= "true"
