--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     id = "thedoc" 
     spec-url="https://api.stg.pazemo.com/openapi.json"
     allow-server-selection = "false"
-    show-header = "true"
+    show-header = "false"
     show-info	= "true"
     theme = "light"
     primary-color = "#00bfff"
@@ -35,7 +35,7 @@
     allow-api-list-style-selection = "false"
     regular-font = 'Open Sans'
     schema-style = 'tree'
-    render-style = 'view'
+    render-style = 'read'
     default-schema-tab = "model"
   >
   <div slot="nav-logo" style="display: flex; align-items: center; justify-content: center;"> 
