--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
+  <!-- <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes"> -->
   <title>Pazemo API</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600&display=swap" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/Pazemo/docs/main/source/images/logo.png"/>
@@ -25,7 +25,7 @@
 <rapi-doc 
     id = "thedoc" 
     spec-url="https://api.stg.pazemo.com/openapi.json"
-    allow-server-selection = "false"
+    allow-server-selection = "true"
     show-header = "false"
     show-info	= "true"
     theme = "light"
@@ -33,6 +33,8 @@
     allow-try = "true"
     sort-endpoints-by = "summary"
     allow-api-list-style-selection = "false"
+    load-fonts ="true"
+    font-size ="large"
     regular-font = 'Open Sans'
     schema-style = 'tree'
     render-style = 'read'
