--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes"> -->
   <title>Pazemo API</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/Pazemo/docs/main/source/images/logo.png"/>
+  <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/Pazemo/docs/main/source/images/favicon.ico"/>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.18.1/build/styles/default.min.css">
   <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.18.1/build/highlight.min.js"></script>
 </head>
